[package]
name = "minifasb"
version = "0.1.0"
edition = "2021"

[dependencies]
#clingo = { version = "0.7.2", features = ["static-linking"] }
clingo = { version = "0.7.2", features = ["static-linking"], git = "https://github.com/drwadu/clingo-rs", branch = "latest" }
thiserror = "1.0.40"

[dev-dependencies]
rand = "0.8"
